# Atheria

./: .cursorrules  .gitignore  .lightning  =2.10.0  AGENTS.md  Atheria.ipynb  AtheriaV3.ipynb  CMakeLists.txt  README.md  app.py  backend_log.txt  benchmark_report_SNN_UNET-d8-h32-g64-lr1e-4.md  docker-compose.yml  dummy_chunk_model.pt  dummy_native_model.pt  dummy_native_model_128ch.pt  dummy_pipeline_model.pt  experiment_quantum_genesis_results.json  index.html  ionq_job_id.txt  ionq_variational_job_id.txt  lab.html  lint_results.txt  lint_results_final.txt  main.py  main_lab.py  pyproject.toml  quantum_lifecycle_model.pth  requirements-docker-compat.txt  requirements.txt  run_server.py  run_visualizations.py  setup.py  test_initial_state_generation.py  test_native_engine_particles.py  test_training.py  train.py  ui.py  verify_changes.py  verify_grpc_integration.sh  (+1 more)
.gemini/: GEMINI.md  settings.json.orig
.gemini/commands/: run_train_with_config_update.py  train.toml
.github/: PULL_REQUEST_PHASE_3.md
.github/workflows/: ci.yml  deploy-pages.yml  gemini-review.yml  native-engine-release.yml  version-bump.yml
Atheria/: README.md  architecture.md
Atheria/.obsidian/: community-plugins.json  workspace.json
Atheria/.smart-env/: smart_env.json
docs/: 00_KNOWLEDGE_BASE.md  00_KNOWLEDGE_BASE_GAPS_ANALYSIS.md  00_RESPONSIBILITIES.md  AGENT_GUIDELINES.md  Architecture.md  EXPERIMENTATION_GUIDE.md  HISTORY_SYSTEM.md  MASSIVE_INFERENCE_ARCHITECTURE.md  Models.md  OBSIDIAN_SETUP.md  PROGRESSIVE_LEARNING.md  PROTOCOL.md  Progressive_Training.md  README.md  TIME_TREE_SYSTEM.md  ZOOM_AND_DATA_TRANSFER.md
docs/.obsidian/: graph.json  workspace.json
docs/00_Inbox/: ionq_polar_sim.md  ionq_time.md
docs/10_core/: 00_CORE_MOC.md  API_COMMANDS_REFERENCE.md  ATHERIA_4_MASTER_BRIEF.md  ATHERIA_5_MASTER_BRIEF.md  ATHERIA_GLOSSARY.md  CI_CD_SETUP.md  PROGRESSIVE_LEARNING.md  PYTHON_TO_NATIVE_MIGRATION.md  README.md  ROADMAP_AI_RESEARCH.md  ROADMAP_INFERENCE_OPTIMIZATION.md  ROADMAP_INFRASTRUCTURE.md  ROADMAP_PHASE_1.md  ROADMAP_PHASE_2.md  ROADMAP_PHASE_3.md  ROADMAP_PHASE_4.md  ROADMAP_PHASE_5_BACKLOG.md  TECHNICAL_ARCHITECTURE_V4.md  THEORETICAL_FRAMEWORK.md
docs/20_Concepts/: 00_CONCEPTS_MOC.md  3D_STATE_SPACE_CONCEPT.md  ADVANCED_QUANTUM_FEATURES.md  AETHERIA_5_0_VISION.md  APU_ARCHITECTURE.md  AdS_CFT_Correspondence.md  CONCEPT_REVERSIBLE_TIME_AND_RENORMALIZATION.md  CUDA_CONFIGURATION.md  ENGINE_ARCHITECTURE.md  FIELD_THEORY_INTERPRETATION.md  FIELD_VISUALIZATIONS.md  GATEWAY_PROCESS_INTEGRATION.md  GEODESIC_QUANTUM_GRAVITY.md  HARMONIC_ENGINE.md  HARMONIC_VACUUM_CONCEPT.md  HISTORY_BUFFER_ARCHITECTURE.md  HISTORY_BUFFER_FUTURE.md  HOLOGRAPHIC_PRINCIPLE.md  INFERENCE_OPTIMIZATION_STRATEGIES.md  LATTICE_QFT_THEORY.md  NATIVE_ENGINE_DEVICE_CONFIG.md  NATIVE_PARALLELISM.md  NEURAL_CELLULAR_AUTOMATA_THEORY.md  OBSERVER_EFFECT_IMPLEMENTATION.md  OPTICAL_PROBABILISTIC_ARCHITECTURE.md  ORCH_OR_THEORY.md  PHASE_SPACE_VISUALIZATION.md  (+17 more)
experiments/: README_LOW_MEMORY.md
frontend/: .eslintrc.cjs  frontend_log.txt  index.html  lint_errors.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
notebooks/: Atheria.ipynb  AtheriaV3.ipynb  Atheria_Kaggle_Setup.ipynb  Atheria_Progressive_Training.ipynb  Atheria_Training_Kaggle_Colab.ipynb  setup_kaggle.md
protos/: simulation.proto  simulation_pb2.py  simulation_pb2_grpc.py
scripts/: benchmark_comparison.py  benchmark_engine_comparison.py  benchmark_ionq_init.py  benchmark_native_chunking.py  benchmark_native_engine.py  benchmark_parallelism.py  benchmark_python_vs_native.py  benchmark_tensor_storage.py  bump_version.py  cleanup_models.py  create_transfer_learning.py  debug_qasm_export.py  demo_transfer_learning.py  deploy_inference_model.py  diagnose_native_engine.py  doc_commands.py  docker-compose-wrapper.sh  example_atheria_core.py  example_batch_inference.py  exp06_observer_effect.py  experiment_advanced_ansatz.py  experiment_harmonic_fastforward.py  experiment_holographic_layer.py  experiment_ionq.py  experiment_massive_fastforward.py  experiment_massive_fastforward_ionq.py  experiment_quantum_genesis.py  experiment_quantum_lifecycle.py  experiment_quantum_native_training.py  explore_universe.py  export_model_to_jit.py  find_best_model_ionq.py  fix_notebook_errors.py  generate_dummy_model.py  hybrid_qnn_ionq.py  install_optimization_deps.sh  integration_example.py  plot_exp008_results.py  poc_polar_engine.py  poc_qdesic.py  (+42 more)
src/: __version__.py  batch_inference_engine.py  cli.py  config.py  config.py.bak  config_low_memory.py  data.py  data_compression.py  gpu_optimizer.py  history_manager.py  main.py.old  model.py  model_loader.py  motor_factory.py  octree_binary.py  pipeline_server copy.py  pipeline_server.py  pipeline_train.py  pipeline_viz.py  qc_trainer.py  qc_trainer_v4.py  qca_engine.py  qca_engine_pennylane.py  qca_engine_polar.py  qca_operator_deep.py  qca_operator_mlp.py  qca_operator_unet.py  qca_operator_unet_unitary.py  quadtree_binary.py  roi_manager.py  server_handlers.py  server_state.py  spatial.py  trainer.py  utils.py  visualization.py  visualization_tools.py
tests/: test_all_engines_tools.py  test_all_tools.py  test_compute_backend.py  test_cpp_tensor.py  test_dragonfly_cache.py  test_engine_cache_integration.py  test_engines_training.py  test_epoch_integration.py  test_harmonic_engine.py  test_holographic_engine.py  test_holographic_mixin.py  test_knowledge_base.py  test_lattice_engine.py  test_lattice_tools.py  test_memory_pool.py  test_motor_factory.py  test_motor_factory_integration.py  test_native_engine_openmp.py  test_native_holographic.py  test_native_state_recovery.py  test_octree_integration.py  test_octree_manual.py  test_persistence.py  test_phase_space.py  test_pipeline_server.py  test_quantum_tools.py  test_sparse_engine_cpp.py  test_spatial_indexing.py  test_viz_phase_space.py  verify_bulk_gen.py  verify_lattice_3d.py  verify_lnn.py  verify_native_dense.py  verify_observer.py  verify_polar_tools.py
verification/: verify_handler_fix.py
web/: app.py  index.html
(+565 files in other folders)
